# up-time

./: .gitignore  README.md  alembic.ini  archivelogs.sh  doCount.sh  getlast.sh  pyproject.toml  read_tron_db.py  requirements.txt  run.bat  setup_database_migrations.py  setup_market_data_loader.py  setup_news_fetcher.py  setup_news_table.py  setup_project_structure.py  uptimes.sh
alembic/: env.py
alembic/versions/: 905fcd26e525_create_market_data_table.py  bbd2359d1afe_create_news_data_table.py
config/: .env.example
core/: Discover_pb2.py  Tron_pb2.py
core/contract/: common_pb2.py
mrtg/: mrtg.cfg  p100.cfg  p121.cfg  p122.cfg  p123.cfg  p124.cfg  p125.cfg  p126.cfg  p127.cfg  p128.cfg  p129.cfg  p131.cfg  p140.cfg  p151.cfg  p155.cfg  p180.cfg
sample.data/: sample.data.rar
trading_system/core/: config.py  db_management.py  logger.py  models.py
trading_system/data/: BTCUSD-5.csv  ETHUSD-5.csv  trading_system.db
trading_system/data_ingestion/: market_data_loader.py  news_fetcher.py
